--- a/.GITIGNORE
+++ b/.GITIGNORE
@@ -1,6 +1,6 @@
 MIT LICENSE
 
-Copyright (c) 2021 Brian Marquez
+Copyright (c) 202X Brian Marquez
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
